<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerPast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:ms_hint="English Premier League" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_past"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:reverseLayout="true"
        app:stackFromEnd="true"
        tools:listitem="@layout/item_match" />

</LinearLayout>