...
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sandy_brown_f08a5d"
            android:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:tabIndicatorColor="#0a6366"
...
